[package]
name = "egui_cable"
version = "0.7.0"
license = "MIT OR Apache-2.0"
description = "A generic and extensible data-oriented widget for connecting ports by cables"
homepage = "https://github.com/ryo33/egui_cable"
repository = "https://github.com/ryo33/egui_cable"
readme = "./README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.30"
epaint = "0.30"
# TODO: Leverage egui_hooks for much simpler code
# egui_hooks = "0.8"

[dev-dependencies]
eframe = "0.30"
